Correction for missing margin auto left/right Commit Ref: 0c70a68

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 
 body{
     width: 50%;
-    margin: 0px;
+    margin: 0px auto;
 }
 
 h1 {
